--- a/src/components/cheatcode.css
+++ b/src/components/cheatcode.css
@@ -74,6 +74,13 @@ body {
 
   }
 
+.main{
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
   .card-container {
     cursor: pointer;
     height: 150px;
